# rusty-neko

./: .gitignore  Cargo.toml  README.md  neko.db  neko.db-shm  neko.db-wal
src/: main.rs
src/commands/: mod.rs
src/commands/info/: ping.rs
src/enums/: arg_types.rs  mod.rs  permission_errors.rs  raw_arg_types.rs  staff_roles.rs
src/events/: interaction_create.rs  message_create.rs  mod.rs  ready.rs
src/functions/: command_permissions_for.rs  find_command.rs  get_command_usage.rs  get_staff_role_id.rs  handle_arg_error.rs  mod.rs  parse_args.rs  plural_for.rs
src/handlers/: command_handler.rs  handle_arg_error.rs  handle_permissions_error.rs  mod.rs
src/handlers/interactions/: handle_dismiss_interaction.rs  mod.rs
src/structures/: arg.rs  args.rs  bot.rs  column.rs  database.rs  event_handler.rs  extras.rs  mod.rs  table.rs
src/traits/: command_trait.rs  mod.rs
src/util/: mod.rs
src/util/constants/: mod.rs  staff_roles.rs
src/util/parsers/: mod.rs  parse_bool.rs  parse_int.rs  parse_string.rs
