[package]
name = "rusty-neko"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, version = "0.10", features = [ "rustls_backend", "builder", "cache", "http", "client", "gateway", "utils", "model" ] }
tokio = { version = "1.x", features = ["full"] }
regex = "1.5"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.130"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }